--- a/Ki4C_Solution/Views/Home/TViewPageList.cshtml
+++ b/Ki4C_Solution/Views/Home/TViewPageList.cshtml
@@ -207,9 +207,9 @@
             </td>
         </tr>
         <tr>
-            <td>DiagnosticLevel</td>
+            <td>DiagnosisLevel</td>
             <td>
-                <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosticLevel">/manager/StandardInforMgr/DiagnosticLevel</a>
+                <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisLevel">/manager/StandardInforMgr/DiagnosisLevel</a>
             </td>
         </tr>
         <tr>
