--- a/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
@@ -97,7 +97,7 @@
             <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationQnA">◎ 평가문제와 지문</a></li>
             <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisInputType">◎ 입력 형식</a></li>
             <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationMeasurement">◎ 평가 척도</a></li>
-            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosticLevel">◎ 진단 수준</a></li>            
+            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisLevel">◎ 진단 수준</a></li>            
         </ul>
     </div>
 </aside>
