--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisClass.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisClass.cshtml
@@ -200,7 +200,7 @@
                 DiagnosisClassCode.push(code);
                 DiagnosisClassName.push(name);
             });
-            if (DiagnosisClassNumber.length == 0) {
+            if (DiagnosisClassNumber == null || DiagnosisClassNumber.length == 0) {
                 alert('삭제할 항목을 선택해주세요.');
                 return;
             }
@@ -212,7 +212,7 @@
             if (confirm('\n삭제할 항목 코드 : ' + DiagnosisClassCode + '\n삭제할 항목 이름 : ' + DiagnosisClassName + '\n 해당 진단 항목을 삭제하시겠습니까?')) {
                 // 하나씩 삭제
                 $.ajax({
-                    type: 'POST',
+                    type: 'DELETE',
                     url: '/api/APIManagerStandardInforMgr/DiagnosisClass/delete',
                     dataType: 'json',
                     contentType: 'application/json; charset=utf-8',
