--- a/Ki4C_Solution/Views/Shared/_LayoutKi4C_Aside_my.cshtml
+++ b/Ki4C_Solution/Views/Shared/_LayoutKi4C_Aside_my.cshtml
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="~/css/style.css" />
     @*<link rel="stylesheet" href="~/css/style_wide.css" />*@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.2/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.2/js/jquery.dataTables.js"></script>
 </head>
 <body>
     <div id="wrap">
